force-app/main/default/objects/OpportunityLineItem/fields/SmartSheet_Ticket_Request__c.field-meta.xml
<CustomField>
    <fullName>SmartSheet_Ticket_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce to SmartSheet integration: Send product line to SmartSheet ticket request form.</description>
    <inlineHelpText>Check this box and save to send this Product line to SmartSheet as a ticket request</inlineHelpText>
    <label>SmartSheet Ticket Request</label>
    <type>Checkbox</type>
</CustomField>