force-app/main/default/objects/OpportunityLineItem/fields/SmartSheet_Ticket_Update__c.field-meta.xml
<CustomField>
    <fullName>SmartSheet_Ticket_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce to SmartSheet integration - update flag set to true when Opportunity is updated and SmartSheet Ticket ID &lt;&gt; NULL</description>
    <label>SmartSheet Ticket Update</label>
    <type>Checkbox</type>
</CustomField>