force-app/main/default/objects/OpportunityLineItem/fields/Start_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Formula__c</fullName>
    <formula>ServiceDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Formula</label>
    <type>Date</type>
</CustomField>