force-app/main/default/objects/OpportunityLineItem/fields/Sys_Admin_Modification__c.field-meta.xml
<CustomField>
    <fullName>Sys_Admin_Modification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sys Admin Modification</label>
    <type>Checkbox</type>
</CustomField>