force-app/main/default/objects/OpportunityLineItem/fields/Target_Salary__c.field-meta.xml
<CustomField>
    <fullName>Target_Salary__c</fullName>
    <formula>UnitPrice*1920*0.5/1.25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>