force-app/main/default/objects/OpportunityLineItem/fields/Total_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>Total_EBITDA__c</fullName>
    <formula>TotalPrice *  Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total EBITDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>