force-app/main/default/objects/OpportunityLineItem/fields/True_End_Date__c.field-meta.xml
<CustomField>
    <fullName>True_End_Date__c</fullName>
    <label>True End Date</label>
    <type>Date</type>
</CustomField>