force-app/main/default/objects/OpportunityLineItem/fields/True_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>True_Start_Date__c</fullName>
    <label>True Start Date</label>
    <type>Date</type>
</CustomField>