force-app/main/default/objects/OpportunityLineItem/fields/Valid_for_Meaningful__c.field-meta.xml
<CustomField>
    <fullName>Valid_for_Meaningful__c</fullName>
    <formula>IF(NOT(ISBLANK(Meaningful_Id__c)),LEFT(Meaningful_Id__c,LEN(Opportunity.Account.Account_Prefix__c))= LEFT(Opportunity.Account.Account_Prefix__c,LEN(Opportunity.Account.Account_Prefix__c)),FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid for Meaningful</label>
    <type>Checkbox</type>
</CustomField>