force-app/main/default/objects/OpportunityLineItem/fields/View_Schedules__c.field-meta.xml
<CustomField>
    <fullName>View_Schedules__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;Id,&apos;View Schedules&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Schedules</label>
    <type>Text</type>
</CustomField>