force-app/main/default/objects/OpportunityLineItem/fields/WD_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>WD_Contract_ID__c</fullName>
    <formula>Opportunity.WD_Contract_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WD Contract ID</label>
    <type>Text</type>
</CustomField>