force-app/main/default/objects/OpportunityLineItem/fields/WD_PRJ_ID__c.field-meta.xml
<CustomField>
    <fullName>WD_PRJ_ID__c</fullName>
    <externalId>true</externalId>
    <label>WD PRJ ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>