force-app/main/default/objects/OpportunityLineItem/fields/WD_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>WD_Project_Name__c</fullName>
    <formula>WD_PRJ_ID__c +&quot; &quot;+ Opportunity.Name +&quot; &quot;+ Product_Name_Cost_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WD Project Name</label>
    <type>Text</type>
</CustomField>