force-app/main/default/objects/OpportunityLineItem/fields/WD_Receivable_Contract_Line_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>WD_Receivable_Contract_Line_Reference_ID__c</fullName>
    <description>Field to display WD_Receivable_Contract_Line_Reference_ID__c from Workday.</description>
    <label>WD_Receivable_Contract_Line_Reference_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>