force-app/main/default/objects/OpportunityLineItem/fields/Weighted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Amount__c</fullName>
    <formula>Opportunity.Probability * TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>