force-app/main/default/objects/OpportunityLineItem/fields/WIP2NB__c.field-meta.xml
<CustomField>
    <fullName>WIP2NB__c</fullName>
    <formula>IF( Forecast_Category__c = &quot;Pipeline&quot; , Current_Year_Forecast__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIP2NB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>