force-app/main/default/objects/OpportunityLineItem/fields/WIP_NB_Total__c.field-meta.xml
<CustomField>
    <fullName>WIP_NB_Total__c</fullName>
    <formula>WIP2NB__c - ( Projected_Total__c + Contracted_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIP NB Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>