force-app/main/default/objects/OpportunityLineItem/fields/Won_Amount__c.field-meta.xml
<CustomField>
    <fullName>Won_Amount__c</fullName>
    <formula>IF( Opportunity.IsWon = TRUE, TotalPrice ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>