force-app/main/default/objects/OpportunityLineItem/fields/Workday_Contract_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Workday_Contract_Line_Status__c</fullName>
    <label>Workday Contract Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>