force-app/main/default/objects/OpportunityLineItem/fields/Workday_Project_Requested__c.field-meta.xml
<CustomField>
    <fullName>Workday_Project_Requested__c</fullName>
    <description>Automatically set via flow when Project Status is set to Request</description>
    <label>Workday Project Requested</label>
    <type>Date</type>
</CustomField>