force-app/main/default/objects/OpportunityLineItem/fields/Workday_Project_State__c.field-meta.xml
<CustomField>
    <fullName>Workday_Project_State__c</fullName>
    <label>Workday Project State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workday_Project_State</valueSetName>
    </valueSet>
</CustomField>