force-app/main/default/objects/OpportunityLineItem/fields/Workday_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Workday_Project_Status__c</fullName>
    <label>Workday Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Pending Closure</fullName>
            </value>
            <value>
                <fullName>Pitch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>