force-app/main/default/objects/OpportunityLineItem/validationRules/End_Date_before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_before_Start_Date</fullName>
    <active>true</active>
    <description>Prevents user from setting End Date before Start Date</description>
    <errorConditionFormula>AND(ServiceDate &gt;  End_Date__c,NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Your Start Date is after your End Date. Please correct your Product Dates.</errorMessage>
</ValidationRule>