force-app/main/default/objects/OpportunityLineItem/validationRules/Lock_Closed_Won_Reconciled_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Closed_Won_Reconciled_Products</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Opportunity.StageName) = &quot;Closed Won - Reconciled&quot;,
NOT(CONTAINS($UserRole.Name,&quot;Accounting&quot;)),
NOT($Profile.Name = &quot;System Administrator&quot;))&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>Closed Won - Reconciled Products cannot be edited except by Accounting.</errorMessage>
</ValidationRule>