force-app/main/default/objects/OpportunityLineItem/validationRules/Prevent_Terminated_Change_True_to_False.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Terminated_Change_True_to_False</fullName>
    <active>true</active>
    <description>Prevent Terminated from being updated from TRUE to FALSE</description>
    <errorConditionFormula>AND( 
 ISCHANGED(Terminated__c), 
 Terminated__c = FALSE, $Profile.Name &lt;&gt; &apos;System Administrator&apos;)</errorConditionFormula>
    <errorMessage>Terminated cannot be changed from True to False</errorMessage>
</ValidationRule>