force-app/main/default/objects/OpportunityLineItem/validationRules/Prevent_WD_Project_Request_IF_No_Acc_Pfx.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_WD_Project_Request_IF_No_Acc_Pfx</fullName>
    <active>true</active>
    <description>Prevent Workday Project Status = Request if  Account &apos;Account Prefix&apos; or  &apos;WWD ProjectID&apos; missing</description>
    <errorConditionFormula>ISCHANGED( Workday_Project_Status__c ) &amp;&amp; ISPICKVAL( Workday_Project_Status__c , &apos;Request&apos;) &amp;&amp;
(ISBLANK(Opportunity.Account.Account_Prefix__c) || ISBLANK(Opportunity.Account.WD_CustomerID__c))</errorConditionFormula>
    <errorMessage>Error message: &apos;Account Prefix and/or Workday Customer ID is missing. Please update on the Account record. Please contact your Accounting lead to create or validate the account record.&apos;</errorMessage>
</ValidationRule>