force-app/main/default/objects/OpportunityLineItem/validationRules/Prevent_WD_ProjectReq_If_ProjID_Populate.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_WD_ProjectReq_If_ProjID_Populate</fullName>
    <active>true</active>
    <description>If Meaningful ID is already populated, prevent Workday Project Status = Request
PV: ends in
&amp;&amp; NOT($Profile.Name = &quot;System Administrator&quot;)</description>
    <errorConditionFormula>ISCHANGED( Workday_Project_Status__c ) &amp;&amp;  
ISPICKVAL(Workday_Project_Status__c , &quot;Request&quot;) &amp;&amp;  NOT ISBLANK(Meaningful_Id__c)</errorConditionFormula>
    <errorMessage>The Product Already has a Meaningful ID. You cannot overwrite it.</errorMessage>
</ValidationRule>