force-app/main/default/objects/OpportunityLineItem/validationRules/Product_End_Date_is_NULL.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_End_Date_is_NULL</fullName>
    <active>true</active>
    <description>Product requires an End Date</description>
    <errorConditionFormula>AND(ISBLANK( End_Date__c ),NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date is required.</errorMessage>
</ValidationRule>