force-app/main/default/objects/OpportunityLineItem/validationRules/Product_Start_Date_is_NULL.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Start_Date_is_NULL</fullName>
    <active>true</active>
    <description>Product requires a Start Date</description>
    <errorConditionFormula>AND(ISBLANK(ServiceDate),NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
    <errorDisplayField>ServiceDate</errorDisplayField>
    <errorMessage>Start Date is required.</errorMessage>
</ValidationRule>