force-app/main/default/objects/OpportunityLineItem/validationRules/Region_is_NULL.validationRule-meta.xml
<ValidationRule>
    <fullName>Region_is_NULL</fullName>
    <active>true</active>
    <description>Product requires a Region (geography__c)</description>
    <errorConditionFormula>AND(
    ISBLANK(TEXT(Geography__c)),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorDisplayField>Geography__c</errorDisplayField>
    <errorMessage>Region is required on your product.</errorMessage>
</ValidationRule>