force-app/main/default/objects/OpportunityLineItem/validationRules/Sales_Price_cannot_equal_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Price_cannot_equal_zero</fullName>
    <active>true</active>
    <description>Sales Price field cannot equal zero</description>
    <errorConditionFormula>AND(UnitPrice=0,Product2.Name &lt;&gt; &apos;Termination&apos;)&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>Sales Price field cannot equal zero</errorMessage>
</ValidationRule>