force-app/main/default/objects/OpportunityLineItem/validationRules/Sales_Price_may_not_be_less_than_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Price_may_not_be_less_than_Cost</fullName>
    <active>true</active>
    <errorConditionFormula>AND( UnitPrice &lt; Hard_Cost__c, UnitPrice &gt; 0,OR(Opportunity.RecordType.Name= &quot;Cycle Direct&quot;, Opportunity.RecordType.Name= &quot;Laundry Service / Cycle&quot;))&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>Sales Price may not be less than Cost</errorMessage>
</ValidationRule>