force-app/main/default/objects/OpportunityLineItem/validationRules/Termination_must_be_zero_or_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Termination_must_be_zero_or_negative</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Product2.Name = &apos;Termination&apos;,  UnitPrice  &gt; 0)</errorConditionFormula>
    <errorMessage>Termination Amount cannot be greater than 0</errorMessage>
</ValidationRule>